# bnn-stock-market

./: .gitignore  neuralnet.py  pyproject.toml
