[tool.poetry]
name = "bnn-stock-market"
version = "0.1.0"
description = "repo for using bnn for stock price predictions"
authors = ["Hud Wahab <hudwahab@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "bnn_stock_market"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.24.1"
matplotlib = "^3.6.2"
tensorflow = "^2.11.0"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
